src/index.css
/* ... */
.bg_light_grey {
    background: #00000008 !important;
}

.text-c1 {
    color: var(--c1);
}

.text-c2 {
    color: var(--c2);
}

.sub_heading {
    font-size: 12px;
}

.section_container {
    max-width: 1900px;
    margin: auto;
    width: 100%;
    padding-left: 50px;
    padding-right: 50px;
}

.navbar_links.active {
    position: fixed;
    z-index: 99;
    top: 0;
    left: 0;
    right: 0;
    background: #ffffff;
    transition: all .3s ease-out;
}

.nav_parent {
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.btn_login,
.btn_signup {
    padding: 5px 20px;
    border-radius: 6px;
    text-wrap: nowrap;
    display: flex;
}

.btn_login {
    border: 1px solid var(--c2);
    color: var(--c2);
    background-color: transparent;
    transition: all .5s ease-out;
}

.btn_login:hover {
    background-color: var(--c2);
    color: #ffffff;
    transition: all .5s ease-out;
}

.btn_signup {
    border: 1px solid var(--c1);
    color: #ffffff;
    background-color: var(--c1);
    transition: all .5s ease-out;
}

.btn_signup:hover {
    background-color: #121e41;
    transition: all .5s ease-out;
}

.v-navbar {
    position: relative;
}

.v-navbar .search_parent {
    position: absolute;
    left: 0;
    right: 0;
    z-index: 9;
}

.search_parent i {
    position: absolute;
    display: flex;
    left: 12px;
    top: 0;
    bottom: 0;
    margin: auto;
    z-index: 1;
    align-items: center;
    font-size: 15px;
}

.v-navbar input[type="search"]::placeholder {
    color: var(--c1);
    font-family: var(--heading-font);
}

.v-navbar input[type="search"] {
    color: var(--c1);
    padding: 8px 15px;
    border: 1px solid var(--c1);
    border-radius: 24.5px;
    text-indent: 20px;
}

.login_signup_sec {
    font-size: 14px;
    font-weight: 500;
}

.menu-icon {
    display: none;
}

.nav-elements {
    padding: 0 30px;
    width: 100%;
}

.nav-elements ul {
    width: fit-content;
    margin: auto;
    display: flex;
    justify-content: center;
    list-style-type: none;
    align-items: center;
}

.nav-elements ul li {
    padding: 0 15px;
}

.nav-elements ul a,
.nav-elements .dropdown-toggle {
    font-size: 14px;
    font-weight: 500;
    color: #000000;
    text-decoration: none;
    font-family: var(--heading-font);
}

.nav-elements ul a.active {
    position: relative;
}

.nav-elements ul li {
    position: relative;
}

.dropdown-toggle {
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 6px;
}

.dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    background: #fff;
    min-width: 200px;
    flex-direction: column;
    align-items: flex-start !important;
    line-height: 30px;
    padding: 10px 0;
    border-radius: 8px;
    box-shadow: 0 10px 30px #0000001a;
    opacity: 0;
    visibility: hidden;
    transform: translateY(10px);
    transition: all 0.3s ease;
    z-index: 100;
}

.dropdown-menu li {
    padding: 8px 20px;
}

.dropdown-menu li a {
    color: #474747;
    text-decoration: none;
    display: block;
}

.dropdown-menu li a:hover {
    color: var(--c1);
}

.dropdown i {
    font-size: 12px;
}

/* Open state */
.dropdown.open .dropdown-menu {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.ab-lgo-bx {
    background-color: #000000;
    border-radius: 50%;
    padding: 10px;
    height: 50px;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.ab-lgo-bx i {
    color: #eeeeee;
    font-size: 22px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo img {
    width: 210px;
}

@media screen and (min-width:1250px) {
    .nav-elements ul.dropdown-menu li {
        padding: 5px 15px;
    }

    .nav-elements ul li {
        padding: 30px 15px;
    }
}

@media (min-width:991px) and (max-width:1250px) {
    .nav-elements {
        padding: 0 !important;
    }

    .nav-elements .dropdown-toggle,
    .nav-elements ul li a {
        font-size: 12px;
    }

    .nav-elements ul.dropdown-menu li {
        padding: 5px 10px;
    }

    .nav-elements ul li {
        padding: 20px 10px;
    }

    .logo img {
        width: 140px;
    }

    .btn_login,
    .btn_signup {
        padding: 5px 15px;
        font-size: 14px;
    }

    .v-navbar input[type="search"] {
        padding: 5px;
        text-indent: 25px;
        font-size: 14px;
        width: 140px;
    }
}

.v-navbar .dropdown-toggle::after {
    display: none;
}

/* Default (Desktop) */
.nav-elements .dropdown {
    position: relative;
}

.nav-elements .dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    min-width: 220px;
    display: none;
    background: #fff;
    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
    border-radius: 8px;
    padding: 10px 0;
    z-index: 999;
}

/* Show dropdown */
.nav-elements .dropdown.open .dropdown-menu {
    display: block;
}

/* ---------------- MOBILE FIX ---------------- */


/* login page */
.login-container {
    background-color: #dcdefe;
}

.login-container .container {
    background: #ffffff;
    margin: auto;
    width: 100%;
}

.login-container .logo svg {
    height: 40px;
    width: 40px;
    fill: var(--c2);
}

.login-container .login-form {
    box-sizing: border-box;
    padding: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.login-container .login-form .login-form-inner {
    max-width: 380px;
    width: 95%;
}

.login-container .login-form .login-form-inner .login_logo img {
    height: 45px;
}

.login-container .login-form .google-login-button .google-icon svg {
    height: 20px;
    display: flex;
    margin-right: 10px;
}

.login-container .login-form .google-login-button {
    color: #333333;
    border: 1px solid #d6d6d6;
    margin: 40px 0 20px;
}
/* ... */

